# ios-shell

./: .gitignore  README.md  gotchas.md  mutmut_config.py  pyproject.toml
.github/workflows/: main.yml
docs/: conf.py  index.rst  requirements.txt
docs/ios_shell/: index.rst  keys.rst  regex.rst  sections.rst
docs/source/: ios_shell.rst  modules.rst
docs/source/ios_shell/: index.rst  parsing.rst  shell.rst  utils.rst
ios_shell/: __init__.py  keys.py  parsing.py  regex.py  sections.py  shell.py  utils.py
tests/: corrections_test.py  parsing_test.py  shell_test.py  utils_test.py
tests/data/: 00200001.med  01100124.bot  1930-003-0058.bot  1930-031-0001.bot  1930-031-0010.bot  1930-099-0001.bot  1933-001-0001.bot  1933-001-0004.bot  1938-019-0001.bot  1950-001-0033.bot  1950-046-0002.bot  1952-002-0018.bot  1954-010-0001.bot  1954-010-0002.bot  1956-001-9001.bot  1958-004-0001.bot  1959-040-0013.bot  1961-008-0117.bot  1967-070-0004.ctd  1985-041-0004.bot  1986-033-0003.bot  1987-070-0001.bot  1991-017-0003.bot  1991-017-0010.bot  1992-016-0001.bot  1994-031-0512.ctd  1996-036-0005.che  1996-038-0077.che  1997-033-0003.ctd  1998-015-8001.bot  2002-008-0026.ctd  2002-030-8008.bot  2002-043-Cape-Beale-Lighthouse.bot  2004-016-0013.ctd  2005-010-0016.che  2008-007-0002.tob  2008-010-0001.che  2008-026-0089.che  2015-022-0031.bot  51010002.ubc  (+7 more)
