[tool.poetry]
name = "ios-shell"
version = "0.1.11"
description = ""
authors = ["James Hannah <jhannah@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.4"
fortranformat = "^1.0.1"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
